<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.riversanskiriti.prarang.fragment.CityPortalFragment">

    <!-- TODO: Update blank fragment layout -->

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:layout_margin="20dp"
          android:layout_weight="1">

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp"
              android:layout_weight="1"
              app:cardBackgroundColor="#1E285B"
              android:onClick="onJaunpurClick">

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/cityportal_tab_jaunpur"
                  android:textSize="30dp"
                  android:textColor="#ffffff"
                  android:gravity="center"
                  android:layout_gravity="center"/>

          </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp"
              android:layout_weight="1"
              app:cardBackgroundColor="#1E285B"
              android:onClick="onLucknowClick">

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/cityportal_tab_lucknow"
                  android:textSize="30dp"
                  android:gravity="center"
                  android:textColor="#ffffff"
                  android:layout_gravity="center"/>

          </androidx.cardview.widget.CardView>

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:layout_margin="20dp"
          android:layout_weight="1">

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp"
              android:layout_weight="1"
              app:cardBackgroundColor="#1E285B"
              android:onClick="onMeerutClick">

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/cityportal_tab_meerut"
                  android:textSize="30dp"
                  android:textColor="#ffffff"
                  android:gravity="center"
                  android:layout_gravity="center"/>

          </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:id="@+id/card_rampur"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp"
              android:layout_weight="1"
              app:cardBackgroundColor="#1E285B"
              android:onClick="onRampurClick">

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/cityportal_tab_rampur"
                  android:textColor="#ffffff"
                  android:textSize="30dp"
                  android:gravity="center"
                  android:layout_gravity="center"/>

          </androidx.cardview.widget.CardView>



      </LinearLayout>

  </LinearLayout>
</FrameLayout>
