<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_inner"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        android:gravity="center"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000"
                    android:text="@string/filter_city"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll0"
                android:gravity="start"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@string/checkbox_all"
                    android:textColor="#000"
                    android:textSize="18sp" />

            </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll2"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:gravity="start"
                    android:layout_below="@id/ll1"
                    android:layout_height="wrap_content">

                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="170dp"
                        android:layout_gravity="center"
                        android:divider="#fff"
                        tools:listitem="@layout/lv_item"
                        android:id="@+id/lv">
                    </ListView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:weightSum="2"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/ll2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dismiss"
                        android:textSize="16sp"
                        android:padding="6dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/border_view"
                        android:textColor="#4285F4"
                        android:text="@string/button_dismiss"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/next"
                        android:textSize="16sp"
                        android:padding="6dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/border_view"
                        android:textColor="#4285F4"
                        android:text="@string/button_submit"/>

                </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
